--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = "^0.115.6"
+starlette = ">=0.40.0,<0.42.0"
 uvicorn = "^0.34.0"
 sqlalchemy = "^2.0.36"
 psycopg2-binary = "^2.9.10"
@@ -15,6 +16,7 @@ motor = "^3.6.0"
 pydantic-settings = "^2.7.0"
 passlib = "^1.7.4"
 bcrypt = "^4.2.1"
+pydantic = "^2.10.4"
 
 
 [build-system]
