--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ pymongo = ">=4.9,<4.10"
 motor = "^3.6.0"
 pydantic-settings = "^2.7.0"
 passlib = "^1.7.4"
-bcrypt = "^4.2.1"
-pydantic = "^2.10.4"
+bcrypt = "==3.2.0"
+pydantic = {extras = ["email"], version = "^2.10.4"}
 
 
 [build-system]
