--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-settings = "^2.7.0"
 passlib = "^1.7.4"
 bcrypt = "==3.2.0"
 pydantic = {extras = ["email"], version = "^2.10.4"}
+crud = "^0.1"
 
 
 [build-system]
