--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,12 @@ passlib = "^1.7.4"
 bcrypt = "==3.2.0"
 pydantic = {extras = ["email"], version = "^2.10.4"}
 crud = "^0.1"
+pytest = "^8.3.4"
+pytest-mock = "^3.14.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
