cadastro de assinantes - subscribers

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,4 +6,6 @@ omit =
     backendeldery/database_nosql.py
     backendeldery/setup_mongo.py
     backendeldery/process_audit_logs.py
+    backendeldery/tests/*
+
 
