--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,13 @@ pydantic = {extras = ["email"], version = "^2.10.4"}
 crud = "^0.1"
 pytest = "^8.3.4"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.25.2"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
+pytest-asyncio = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
