--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^8.3.4"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.25.2"
 httpx = "^0.28.1"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
