--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
+        poetry lock
         poetry install
 
     - name: Run tests
@@ -38,4 +39,3 @@ jobs:
       run: |
         curl -fsSL https://deepsource.io/cli | sh
         deepsource report --analyzer python --key pytest-coverage --value-file .coverage
-       
