cadastro de assinantes - subscribers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,4 +60,4 @@ jobs:
       env:
         DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
       run: |
-        deepsource report --analyzer python --key pytest-coverage --value-file .coverage
+        deepsource report --analyzer coverage --key pytest-coverage --value-file .coverage
