--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,10 +1,9 @@
 version = 1
 
 [[analyzers]]
-name = "python"
-enabled = true
+  name = "python"
+  enabled = true
 
-[analyzers.meta]
-coverage = true  # Enable coverage analysis
-test_pattern = "backendeldery/tests/"  # Directory where your tests are located
-run_tests = "poetry run pytest --cov=backendeldery --cov-branch"  # Command to run tests and generate coverage
+test_patterns = [
+  "pytest"  # Run pytest for testing
+]
