--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,9 +1,7 @@
 version = 1
 
 [[analyzers]]
-  name = "python"
-  enabled = true
+name = "python"
 
-test_patterns = [
-  "pytest"  # Run pytest for testing
-]
+  [analyzers.meta]
+  runtime_version = "3.x.x"
