--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,15 +33,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry add --dev pytest pytest-cov deepsource
         poetry lock
         poetry install
-
-    - name: Run DeepSource analysis
-      uses: deepsource/deepsource-run@v2
-      with:
-        analyzer: python
-        config: .deepsource.toml
 
     - name: Run tests
       env:
@@ -49,7 +42,22 @@ jobs:
         MONGO_URI: "mock_mongo_uri"
         MONGO_DB: "mock_mongo_db"
       run: |
-        poetry run pytest --junitxml=pytest-report.xml
-        deepsource report --junit-file pytest-report.xml
+        poetry run pytest --cov=backendeldery --cov-branch --cov-config=.coveragerc
 
+    - name: Install DeepSource CLI
+      run: |
+        curl -fsSL https://deepsource.io/cli | sh
+        echo "$(pwd)/bin" >> $GITHUB_PATH  # Use environment files to add to PATH
+        ls -l $(pwd)/bin  # List the contents of the bin directory
+        echo $PATH  # Print the PATH environment variable
 
+    - name: Verify DeepSource CLI installation
+      run: |
+        which deepsource  # Check if deepsource is in the PATH
+        deepsource --help  # Print the help message of deepsource
+
+    - name: Upload coverage to DeepSource
+      env:
+        DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
+      run: |
+        deepsource report --analyzer python --value-file .coverage
