--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Verify DeepSource CLI installation
       run: |
         which deepsource  # Check if deepsource is in the PATH
-        deepsource --help  # Print the help message of deepsource
+        deepsource version  # Print the help message of deepsource
 
     - name: Upload coverage to DeepSource
       env:
