cadastro de assinantes - subscribers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         poetry run pytest --cov=backendeldery --cov-branch --cov-config=.coveragerc --json-report-file=report.json
     - name: Install DeepSource CLI
       run: |
-        curl -fsSL https://deepsource.io/cli/latest | sh
+        curl -fsSL https://deepsource.io/cli | sh
         echo "$(pwd)/bin" >> $GITHUB_PATH  # Use environment files to add to PATH
         ls -l $(pwd)/bin  # List the contents of the bin directory
         echo $PATH  # Print the PATH environment variable
@@ -60,4 +60,4 @@ jobs:
       env:
         DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
       run: |
-        deepsource report --test-report-file report.json
+        deepsource report  --value-file report.json
