--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
         DATABASE_URL: "sqlite:///./test.db"  # Use a valid SQLAlchemy URL
         MONGO_URI: "mock_mongo_uri"
         MONGO_DB: "mock_mongo_db"
-      run: echo "Environment variables set"
 
     - name: Install dependencies
       run: |
@@ -44,12 +43,12 @@ jobs:
         MONGO_DB: "mock_mongo_db"
       run: |
         poetry run pytest --cov=backendeldery --cov-branch --cov-config=.coveragerc --json-report-file=report.json
+
     - name: Install DeepSource CLI
       run: |
-        curl -fsSL https://deepsource.io/cli | sh
+        wget -O - https://deepsource.io/cli | sh
         echo "$(pwd)/bin" >> $GITHUB_PATH  # Use environment files to add to PATH
-        ls -l $(pwd)/bin  # List the contents of the bin directory
-        echo $PATH  # Print the PATH environment variable
+        ls -l "$(pwd)/bin"  # List the contents of the bin directory
 
     - name: Verify DeepSource CLI installation
       run: |
@@ -60,4 +59,4 @@ jobs:
       env:
         DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
       run: |
-        deepsource report  --value-file report.json
+        deepsource report --analyzer python --key coverage --value-file report.json
