cadastro de assinantes - subscribers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         MONGO_URI: "mock_mongo_uri"
         MONGO_DB: "mock_mongo_db"
       run: |
-        poetry run pytest --cov=backendeldery --cov-branch --cov-config=.coveragerc --json-report-file=report.json
+        poetry run pytest --cov=backendeldery --cov-branch --cov-config=.coveragerc 
         ls -l
     - name: Install DeepSource CLI
       run: |
