--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -3,5 +3,9 @@ version = 1
 [[analyzers]]
 name = "python"
 
+[[analyzers]]
+  name = "test-coverage"
+  enabled = true
+
   [analyzers.meta]
   runtime_version = "3.x.x"
