cadastro de assinantes - subscribers

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,8 +1,11 @@
 version = 1
 
 [[analyzers]]
-  name = "test-coverage"
+  name = "python"
   enabled = true
 
   [analyzers.meta]
   runtime_version = "3.x.x"
+  coverage = true
+  test_pattern = "backendeldery/tests/"
+  run_tests = "poetry run pytest --cov=backendeldery --cov-branch"
