--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,8 +1,25 @@
 version = 1
 
+test_patterns = [
+    "test_*.py"
+]
+
+
 [[analyzers]]
 name = "python"
 enabled = true
 
-[analyzers.meta]
-coverage = true  # Enable test coverage analysis
+  [analyzers.meta]
+  runtime_version = "3.x.x"
+
+[[analyzers]]
+name = "test-coverage"
+enabled = true
+
+[[transformers]]
+name = "black"
+enabled = true
+
+[[transformers]]
+name = "isort"
+enabled = true
