--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 1
+        fetch-depth: 0  # Fetch all commit history
 
     - name: Set up Python
       uses: actions/setup-python@v4
