--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,11 +1,32 @@
 version = 1
 
+test_patterns = [
+    "GaborNet/tests/**",
+    "test_*.py"
+]
+
+exclude_patterns = [
+    "*.lock",
+    "*.toml",
+    "*.yaml",
+    "sanity_check/**",
+]
+
 [[analyzers]]
 name = "python"
+enabled = true
 
   [analyzers.meta]
   runtime_version = "3.x.x"
 
 [[analyzers]]
 name = "test-coverage"
+enabled = true
+
+[[transformers]]
+name = "black"
+enabled = true
+
+[[transformers]]
+name = "isort"
 enabled = true
