--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - '**/*'
   pull_request:
     branches:
       - main
@@ -25,18 +25,12 @@ jobs:
           python-version: '3.12'
 
       - name: Set environment variables and Install Dependecies
-        env:
-          DATABASE_URL: "sqlite:///./test.db"  # Use a valid SQLAlchemy URL
-          MONGO_URI: "mock_mongo_uri"
-          MONGO_DB: "mock_mongo_db"
-
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry add --dev pytest pytest-cov pytest-json-report deepsource
           poetry lock
           poetry install
-
 
       - name: Install DeepSource CLI
         run: |
@@ -49,6 +43,17 @@ jobs:
           which deepsource  # Check if deepsource is in the PATH
           deepsource version  # Print the help message of deepsource
 
+      - name: Run Tests
+        run: |
+          poetry run pytest --cov=./ --cov-report xml --cov-config=.coveragerc
+        continue-on-error: true
+
+      - name: Check Test Results
+        if: failure()
+        run: |
+          echo "Tests failed. Please check the logs for details."
+          exit 1
+
       - name: Upload coverage to DeepSource
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
@@ -58,5 +63,4 @@ jobs:
         run: |
           poetry run pytest --cov=./ --cov-report xml --cov-config=.coveragerc 
           ls -la
-          
           deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
