--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,10 @@ jobs:
           deepsource version  # Print the help message of deepsource
 
       - name: Run Tests
+        env:
+          DATABASE_URL: "sqlite:///./test.db"  # Use a valid SQLAlchemy URL
+          MONGO_URI: "mock_mongo_uri"
+          MONGO_DB: "mock_mongo_db"
         run: |
           poetry run pytest --cov=./ --cov-report xml --cov-config=.coveragerc
           continue-on-error: true
@@ -61,10 +65,6 @@ jobs:
       - name: Upload coverage to DeepSource
         env:
           DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
-          DATABASE_URL: "sqlite:///./test.db"  # Use a valid SQLAlchemy URL
-          MONGO_URI: "mock_mongo_uri"
-          MONGO_DB: "mock_mongo_db"
         run: |
-          poetry run pytest --cov=./ --cov-report xml --cov-config=.coveragerc 
           ls -la
           deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
