--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 # Ignore specific files
 addopts = --ignore=backendeldery/config.py --ignore=backendeldery/create_tables.py --ignore=backendeldery/database.py
 
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::ImportWarning
+    ignore::ResourceWarning
