--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -9,7 +9,7 @@ exclude_patterns = [
     "*.toml",
     "*.yaml",
     "sanity_check/**",
-    "test_*.py",
+    "backendeldery/test_*.py",
 ]
 
 [[analyzers]]
