--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -5,7 +5,7 @@ exclude_patterns = [
     "*.toml",
     "*.yaml",
     "sanity_check/**",
-    "backendeldery/test_*.py",
+    "backendeldery/tests/test_*.py",
 ]
 
 [[analyzers]]
