--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ pytest-asyncio = "^0.25.2"
 httpx = "^0.28.1"
 python-dotenv = "^1.0.1"
 black = "^25.1.0"
+psycopg2 = "^2.9.10"
+alembic = "^1.14.1"
 
 
 [tool.poetry.group.dev.dependencies]
