--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python-dotenv = "^1.0.1"
 black = "^25.1.0"
 psycopg2 = "^2.9.10"
 alembic = "^1.14.1"
+allure-pytest = "^2.13.5"
 
 
 [tool.poetry.group.dev.dependencies]
