--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ motor = "^3.6.0"
 pydantic-settings = "^2.7.0"
 passlib = "^1.7.4"
 bcrypt = "==3.2.0"
-pydantic = {extras = ["email"], version = "^2.10.4"}
+pydantic = { extras = ["email"], version = "^2.10.4" }
 crud = "^0.1"
 pytest = "^8.3.4"
 pytest-mock = "^3.14.0"
@@ -31,6 +31,8 @@ alembic = "^1.14.1"
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
 pytest-asyncio = "^0.25.2"
+black = "^25.1.0"
+allure-pytest = "^2.13.5"
 
 [build-system]
 requires = ["poetry-core"]
