--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ passlib = "^1.7.4"
 bcrypt = "==3.2.0"
 pydantic = { extras = ["email"], version = "^2.10.4" }
 crud = "^0.1"
-pytest = "^8.3.4"
+pytest = "^8.3.5"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.25.2"
 httpx = "^0.28.1"
@@ -27,6 +27,7 @@ black = "^25.1.0"
 psycopg2 = "^2.9.10"
 alembic = "^1.14.1"
 asyncpg = "^0.30.0"
+greenlet = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
