--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: ${SYNC_DATABASE_URL}
       MONGO_URI: ${MONGO_URI}
       MONGO_DB: ${MONGO_DB}
     volumes:
