--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ psycopg2 = "^2.9.10"
 alembic = "^1.14.1"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
+ruff = "^0.11.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -39,3 +40,20 @@ allure-pytest = "^2.13.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+# Ativa uma série de regras recomendadas
+select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
+ignore = []
+
+# Permite no máximo 88 caracteres por linha
+line-length = 88
+
+# Versão do Python a ser considerada
+target-version = "py312"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
+[tool.ruff.isort]
+known-first-party = ["backendeldery"]
