--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,16 @@ jobs:
           python-version: '3.12'
 
       - name: Set environment variables and Install Dependencies
+        env:
+          DATABASE_URL: "sqlite:///./test.db"
+          DATABASE_URL_SYNC: "sqlite:///./test.db"
+          DATABASE_URL_ASYNC: "sqlite+aiosqlite:///./test.db"
+          MONGO_URI: "mongodb://localhost:27017"
+          MONGO_DB: "elderly_care"
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry add --dev pytest pytest-cov pytest-json-report deepsource
+          poetry add --dev pytest pytest-cov pytest-json-report pytest-asyncio aiosqlite deepsource
           poetry lock
           poetry install
 
@@ -47,9 +53,9 @@ jobs:
         env:
           DATABASE_URL: "sqlite:///./test.db"
           DATABASE_URL_SYNC: "sqlite:///./test.db"
-          DATABASE_URL_ASYNC: "sqlite:///./test.db"
-          MONGO_URI: "mock_mongo_uri"
-          MONGO_DB: "mock_mongo_db"
+          DATABASE_URL_ASYNC: "sqlite+aiosqlite:///./test.db"
+          MONGO_URI: "mongodb://localhost:27017"
+          MONGO_DB: "elderly_care"
         run: |
           poetry run pytest -v --cov=./ --cov-report xml --cov-config=.coveragerc
 
