--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,13 +28,12 @@ jobs:
         env:
           DATABASE_URL: "sqlite:///./test.db"
           DATABASE_URL_SYNC: "sqlite:///./test.db"
-          DATABASE_URL_ASYNC: "sqlite+aiosqlite:///./test.db"
           MONGO_URI: "mongodb://localhost:27017"
           MONGO_DB: "elderly_care"
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry add --dev pytest pytest-cov pytest-json-report pytest-asyncio aiosqlite deepsource
+          poetry add --dev pytest pytest-cov pytest-json-report pytest-asyncio deepsource
           poetry lock
           poetry install
 
@@ -53,7 +52,6 @@ jobs:
         env:
           DATABASE_URL: "sqlite:///./test.db"
           DATABASE_URL_SYNC: "sqlite:///./test.db"
-          DATABASE_URL_ASYNC: "sqlite+aiosqlite:///./test.db"
           MONGO_URI: "mongodb://localhost:27017"
           MONGO_DB: "elderly_care"
         run: |
