--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["andrenunes <andremarcelonunes@gmail.com>"]
 readme = "README.md"
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.12"
 fastapi = "^0.115.6"
 starlette = ">=0.40.0,<0.42.0"
 uvicorn = "^0.34.0"
@@ -16,7 +16,7 @@ motor = "^3.6.0"
 pydantic-settings = "^2.7.0"
 passlib = "^1.7.4"
 bcrypt = "==3.2.0"
-pydantic = {extras = ["all"], version = "^2.11.0"}
+pydantic = { extras = ["email"], version = "^2.10.4" }
 crud = "^0.1"
 pytest = "^8.3.5"
 pytest-mock = "^3.14.0"
@@ -29,12 +29,11 @@ alembic = "^1.14.1"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 ruff = "^0.11.1"
-email-validator = "^2.2.0"
-allure-pytest = "^2.13.5"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
+allure-pytest = "2.13.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -49,7 +48,7 @@ ignore = []
 line-length = 88
 
 # Versão do Python a ser considerada
-target-version = "py39"
+target-version = "py312"
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
