Alteração mo CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Set environment variables and Install Dependencies
         env:
-          DATABASE_URL: "sqlite:///./test.db"
           DATABASE_URL_SYNC: "sqlite:///./test.db"
+          DATABASE_URL_ASYNC: "sqlite:///./test.db"
           MONGO_URI: "mongodb://localhost:27017"
           MONGO_DB: "elderly_care"
         run: |
