--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Run Tests
         env:
-          DATABASE_URL: "sqlite:///./test.db"
           DATABASE_URL_SYNC: "sqlite:///./test.db"
+          DATABASE_URL_ASYNC: "sqlite:///./test.db"
           MONGO_URI: "mongodb://localhost:27017"
           MONGO_DB: "elderly_care"
         run: |
