--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,12 @@ asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 ruff = "^0.11.1"
 email-validator = "^2.2.0"
+allure-pytest = "^2.13.5"
+aiosqlite = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^6.0.0"
-allure-pytest = "2.13.2"
 
 [build-system]
 requires = ["poetry-core"]
